[gd_scene load_steps=13 format=3 uid="uid://4vwrqjegqwpj"]

[ext_resource type="Script" path="res://player.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://ftkxr8r4qghp" path="res://art/playerGrey_walk1.png" id="2"]
[ext_resource type="Texture2D" uid="uid://couyhcegeihme" path="res://art/playerGrey_walk2.png" id="3"]
[ext_resource type="Texture2D" uid="uid://b4yyoafu8bi0q" path="res://art/playerGrey_up1.png" id="4"]
[ext_resource type="Texture2D" uid="uid://bko65a0nd66st" path="res://art/playerGrey_up2.png" id="5"]

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2")
}, {
"duration": 1.0,
"texture": ExtResource("3")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4")
}, {
"duration": 1.0,
"texture": ExtResource("5")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="2"]
radius = 27.0
height = 68.0

[sub_resource type="Gradient" id="3"]
colors = PackedColorArray(1, 1, 1, 0.501961, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="4"]
gradient = SubResource("3")

[sub_resource type="Curve" id="5"]
_data = [Vector2(0.00501098, 0.5), 0.0, 0.0, 0, 0, Vector2(0.994989, 0.324), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="6"]
curve = SubResource("5")

[sub_resource type="ParticleProcessMaterial" id="7"]
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("6")
color_ramp = SubResource("4")

[node name="Player" type="Area2D"]
z_index = 10
script = ExtResource("1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("1")
animation = &"right"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("2")

[node name="Trail" type="GPUParticles2D" parent="."]
z_index = -1
amount = 10
process_material = SubResource("7")
texture = ExtResource("2")
speed_scale = 2.0

[node name="RayCastUp" type="RayCast2D" parent="."]
position = Vector2(0, 1)
target_position = Vector2(0, -90)

[node name="RayCastDown" type="RayCast2D" parent="."]
position = Vector2(0, -1)
target_position = Vector2(0, 90)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(1, 1)
target_position = Vector2(-90, 0)

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, 1)
target_position = Vector2(90, 0)

[node name="RayCastUpRight" type="RayCast2D" parent="."]
target_position = Vector2(70, -70)

[node name="RayCastUpLeft" type="RayCast2D" parent="."]
position = Vector2(0, 2)
target_position = Vector2(-70, -70)

[node name="RayCastDownRight" type="RayCast2D" parent="."]
position = Vector2(-2, 0)
target_position = Vector2(70, 70)

[node name="RayCastDownLeft" type="RayCast2D" parent="."]
position = Vector2(2, -1)
target_position = Vector2(-70, 70)

[node name="LineUp" type="Line2D" parent="."]

[node name="LineDown" type="Line2D" parent="."]
position = Vector2(0, -2)

[node name="LineLeft" type="Line2D" parent="."]
position = Vector2(1, 0)

[node name="LineRight" type="Line2D" parent="."]

[node name="LineUpRight" type="Line2D" parent="."]
position = Vector2(0, -1)

[node name="LineUpLeft" type="Line2D" parent="."]
position = Vector2(0, 1)

[node name="LineDownRight" type="Line2D" parent="."]
position = Vector2(-2, -1)

[node name="LineDownLeft" type="Line2D" parent="."]
position = Vector2(2, -2)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
